<resources>
    <string name="app_name">Car Remote ARD</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Car Remote ARD</string>
    <string name="forward">Forward</string>
    <string name="right">Right</string>
    <string name="backward">Backward</string>
    <string name="left">Left</string>
    <string name="stop">Stop</string>
    <string name="host_name">Host Name</string>
    <string name="host_name_crard">Host Name of the Car Remote ARD</string>
    <string name="some">Some action</string>
    <string name="sett">Settings for communicating with the Car Remote Arduino</string>
    <string name="ard">Arduino</string>
</resources>
