<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.devqt.carremoteard.RCControlS">


    <ImageView
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pressStop"
        android:src="@drawable/stop"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/right"
        android:layout_alignEnd="@+id/right"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/stop"/>
    <ImageView
        android:id="@+id/forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/forward"
        android:layout_above="@+id/backward"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="89dp"
        android:onClick="pressForward"
        android:contentDescription="@string/forward"/>
    <ImageView
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/left"
        android:layout_marginTop="77dp"
        android:layout_below="@+id/stop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="pressLeft"
        android:contentDescription="@string/left"/>
    <ImageView
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/right"
        android:layout_alignTop="@+id/left"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="pressRight"
        android:contentDescription="@string/right"/>
    <ImageView
        android:id="@+id/backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/backward"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/forward"
        android:layout_alignStart="@+id/forward"
        android:onClick="pressBackward"
        android:contentDescription="@string/backward"/>

  </RelativeLayout>
